# python-random-codes

./: .gitignore  LICENSE  README.md  pyproject.toml
alpc/: README.md
alpc/beginner/: p001.py  p002.py  p003.py  p004.py  p005.py
flask_micro_framework/: app.py  requirements.txt
flask_micro_framework/templates/: home.html
learning_from_docs/informal_introduction/: __init__.py  numbers.py  strings.py
learning_from_docs/interpreter/: __init__.py  argument_passing.py
mathematical_logical_relationship_operators/: mathematical_operators.py
