[tool.poetry]
name = "python-random-codes"
version = "0.1.0"
description = ""
authors = ["Carlos Mondo <mondo@fastmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest-black = "^0.3.12"
flake9 = "^3.8.3"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
